[gd_scene load_steps=12 format=3 uid="uid://bvwhjlfp1deoo"]

[ext_resource type="Script" path="res://Nova pasta (3)/Actors/strongenemy.gd" id="1_em6yh"]
[ext_resource type="Texture2D" uid="uid://l2td226mfd5l" path="res://Nova pasta (3)/Enemy/Futurista/strongT/Robot Idle.png" id="1_lxrx7"]
[ext_resource type="Texture2D" uid="uid://do1h70cn54rod" path="res://Nova pasta (3)/Enemy/Futurista/strongT/Robot run.png" id="2_wp82m"]
[ext_resource type="Texture2D" uid="uid://c8a84w267hudy" path="res://Nova pasta (3)/Enemy/Futurista/strongT/Robot Death.png" id="3_vapxk"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mlpqi"]
size = Vector2(41, 123)

[sub_resource type="Animation" id="Animation_orqh4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_lxrx7")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("texture:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("texture:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_id4br"]
resource_name = "ifcorrendo"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_wp82m")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("texture:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("texture:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_nxomd"]
resource_name = "ifmorrendo"
length = 1.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_vapxk")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("texture:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [14]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("texture:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13]
}

[sub_resource type="Animation" id="Animation_lo4wx"]
resource_name = "ifparado"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_lxrx7")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("texture:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("texture:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dhp15"]
_data = {
"RESET": SubResource("Animation_orqh4"),
"ifcorrendo": SubResource("Animation_id4br"),
"ifmorrendo": SubResource("Animation_nxomd"),
"ifparado": SubResource("Animation_lo4wx")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tg1k5"]
size = Vector2(47, 125)

[node name="strongenemy" type="CharacterBody2D" groups=["enemies"]]
collision_layer = 4
collision_mask = 131
script = ExtResource("1_em6yh")

[node name="texture" type="Sprite2D" parent="."]
position = Vector2(3, -101)
scale = Vector2(0.2, 0.2)
texture = ExtResource("1_lxrx7")
hframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, -63)
shape = SubResource("RectangleShape2D_mlpqi")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "ifcorrendo"
speed_scale = 0.7
libraries = {
"": SubResource("AnimationLibrary_dhp15")
}

[node name="detector_structures" type="RayCast2D" parent="."]
position = Vector2(20, -6)
target_position = Vector2(17, 0)

[node name="hitbox" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 17

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2(1.5, -63.5)
shape = SubResource("RectangleShape2D_tg1k5")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
